# komoot-mcp-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/komoot_mcp/: __init__.py  auth.py  client.py  context.py  geocoder.py  middleware.py  rate_limiter.py  routing.py  server.py
src/komoot_mcp/tools/: __init__.py  auth_tools.py  browse_tools.py  collection_tools.py  data_tools.py  discover_tools.py  highlight_tools.py  routing_tools.py  share_tools.py  write_tools.py
tests/: conftest.py  test_auth.py  test_client_tour_methods.py  test_context_isolation.py  test_geocoder.py  test_ors_context.py  test_phase2_tools.py  test_phase3_tools.py  test_plan_and_upload.py  test_plan_gpx_format.py  test_rate_limiter.py  test_routing_options.py  test_tools_inline_gpx.py  test_tools_smoke.py  test_upload_failure_surface.py  test_upload_tour_inline.py
