[project]
name = "komoot-mcp-server"
version = "0.1.0"
description = "MCP server for Komoot — browse tours, download GPX, plan routes with AI assistance"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    # Pinned <0.1.0 because we rely on kompy Tour._create_* internals
    # (see client.py docstring) which may change without notice.
    "kompy>=0.0.12,<0.1.0",
    "openrouteservice>=2.3.0",
    "gpxpy>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "vcrpy>=6.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
